--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,11 @@
 <form #loginForm="ngForm" (ngSubmit)="login()">
     <mat-form-field>
-      <input matInput placeholder="Nome" [(ngModel)]="formData.name" name="name" required>
+      <input matInput placeholder="Email" [(ngModel)]="model.email" name="email" required>
     </mat-form-field>
-  
+
     <mat-form-field>
-      <input matInput placeholder="Email" [(ngModel)]="formData.email" name="email" required email>
+      <input matInput placeholder="Password" [(ngModel)]="model.password" name="password" required>
     </mat-form-field>
-  
+
     <button mat-raised-button color="primary" type="submit">Invia</button>
 </form>
