--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,8 +4,8 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Password" [(ngModel)]="model.password" name="password" required>
+      <input matInput placeholder="Password" [(ngModel)]="model.password" name="password" required type="password">
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit">Invia</button>
+    <button mat-raised-button color="primary" type="submit">Entra</button>
 </form>
