--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,12 @@
 <mat-toolbar color="primary">
+    <a mat-button routerLink=''>Home</a>
     <a mat-button routerLink="/register">Registrazione</a>
     <a mat-button routerLink="/login">Entra</a>
+    <a mat-button routerLink="/search">Ricerca</a>
+    <a mat-button routerLink="/contacts">Contatti</a>
+
+    <a mat-button><i class="fa-brands fa-facebook"></i></a>
+    <a mat-button><i class="fa-brands fa-instagram"></i></a>
+    <a mat-button><i class="fa-brands fa-twitter"></i></a>
+    <a mat-button><i class="fa-brands fa-youtube"></i></a>
 </mat-toolbar>
