--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,1 @@
-<img src='https://image.tmdb.org/t/p/w500{{movie.poster_path}}' alt={{movie.title}} *ngFor="let movie of movieList.results">
+<img src='{{imgSrc}}{{movie.poster_path}}' alt={{movie.title}} *ngFor="let movie of movieList.results">
