--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button.slick-prev {
+    left: 0;
+    z-index: 1;
+}
+
+button.slick-next {
+    right: 0;
+}
