--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-button.slick-prev {
-    left: 0;
-    z-index: 1;
+* {
+    box-sizing: border-box;
 }
 
-button.slick-next {
-    right: 0;
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+button.slick-arrow::before {
+    color: black;
 }
