--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,11 +2,6 @@
     <a mat-button routerLink=''>Home</a>
     <a mat-button routerLink="/register">Registrazione</a>
     <a mat-button routerLink="/login">Entra</a>
-    <a mat-button routerLink="/search">Ricerca</a>
     <a mat-button routerLink="/contacts">Contatti</a>
-
-    <a mat-button><i class="fa-brands fa-facebook"></i></a>
-    <a mat-button><i class="fa-brands fa-instagram"></i></a>
-    <a mat-button><i class="fa-brands fa-twitter"></i></a>
-    <a mat-button><i class="fa-brands fa-youtube"></i></a>
+    <app-search></app-search>
 </mat-toolbar>
