--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,15 @@
-<p>search works!</p>
+<input
+    type="text" 
+    id="searchInput" 
+    [(ngModel)]="keyword" 
+    (input)="movieSearch()" 
+    placeholder="Find movies, TV shows"
+/>
+<div *ngIf="searchResults.length > 0">
+    <h2>Search Results</h2>
+    <ul>
+      <li *ngFor="let movie of searchResults">
+        {{ movie.title }}
+      </li>
+    </ul>
+</div>  
