--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,10 +3,9 @@
     id="searchInput" 
     [(ngModel)]="keyword" 
     (input)="movieSearch()" 
-    placeholder="Find movies, TV shows"
+    placeholder="Cerca film"
 />
 <div *ngIf="searchResults.length > 0">
-    <h2>Search Results</h2>
     <ul>
       <li *ngFor="let movie of searchResults">
         {{ movie.title }}
