--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <ngx-slick-carousel [config]="slickConfig">
   <div *ngFor="let movie of movieList.results" ngxSlickItem>
-    <img [src]="imgSrc + movie.poster_path" alt="{{ movie.title }}">
+    <img [src]="imgSrc + movie.poster_path" alt="{{ movie.title }}" [routerLink]="['/movie', movie.id]">
   </div>
 </ngx-slick-carousel>
