--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar color="primary">
-    <a mat-button routerLink=''>Home</a>
-    <a mat-button routerLink="/register">Registrazione</a>
-    <a mat-button routerLink="/login">Entra</a>
-    <a mat-button routerLink="/contacts">Contatti</a>
+    <img src="../../../assets/logo1.png" alt="LABTV logo">
+    <h1>LABTV</h1>
+    <a routerLink=''>Home</a>
+    <a routerLink="/register">Registrazione</a>
+    <a routerLink="/login">Entra</a>
+    <a routerLink="/contacts">Contatti</a>
     <app-search></app-search>
 </mat-toolbar>
