--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,3 +1,16 @@
-.mdc-button {
-    font-family: 'Open Sans', sans-serif;
+:host {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+}
+
+.mat-toolbar {
+    background: linear-gradient(to bottom, black, rgba(0, 0, 0, 0));
+    padding: 20px 16px;
+    height: 90px;
+}
+
+img {
+    height: 100%;
+    transform: translateY(-8%);
 }
