--- a/src/app/components/main-carousel/main-carousel.component.html
+++ b/src/app/components/main-carousel/main-carousel.component.html
@@ -1,4 +1,5 @@
 <ngx-slick-carousel [config]="slickConfig">
     <div *ngFor="let movie of movieList.results" ngxSlickItem [ngStyle]="{'background-image': 'url(' + imgSrc + movie.backdrop_path + ')'}">
+        <h1>{{movie.title}}</h1>
     </div>
 </ngx-slick-carousel>
