--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<input type="text" id="searchInput" [(ngModel)]="keyword" (input)="movieSearch()" placeholder="Cerca film" />
+<input type="text" id="searchInput" [(ngModel)]="keyword" (input)="movieSearch()" placeholder="Cerca" />
 <div *ngIf="searchResults.length > 0">
   <ul>
     <li *ngFor="let movie of searchResults">
