--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -4,24 +4,61 @@
     width: 100%;
 }
 
+
 mat-toolbar {
     --mat-toolbar-title-text-font: 'Open Sans', sans-serif;
     --mat-toolbar-title-text-weight: 1000;
 
-    background: linear-gradient(to bottom, black, rgba(0, 0, 0, 0));
-    padding: 20px 16px;
-    height: 90px;
+    --gap: 2vw;
+
+    background: linear-gradient(to bottom, var(--backgroundColor), rgba(0, 0, 0, 0));
+    padding: 20px var(--leftRightPadding);
+    height: auto;
+    gap: var(--gap);
+}
+
+mat-toolbar * {
+    height: 52px;
+    line-height: 52px;
 }
 
 mat-toolbar h1 {
     --mat-toolbar-title-text-size: 30px;
 }
 
+
 img {
-    height: 100%;
     transform: translateY(-8%);
 }
 
+
 a {
     color: white;
+    transition: 0.5s;
+    background: linear-gradient(to left bottom, var(--primaryColor), var(--secondaryColor));
+    background-clip: text;
+}
+
+a[routerLink="/login"] {
+    background-clip: border-box;
+    border-radius: 10px;
+    padding: 0 2%;
+}
+
+mat-toolbar > a:hover {
+    color: transparent;
+}
+
+
+div:nth-child(1) {
+    display: flex;
+    align-items: center;
+}
+
+div:last-child {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    gap: var(--gap);
+    justify-content: flex-end;
 }
