--- a/src/app/components/main-carousel/main-carousel.component.html
+++ b/src/app/components/main-carousel/main-carousel.component.html
@@ -2,6 +2,7 @@
     <div *ngFor="let movie of movieList.results" ngxSlickItem
         [ngStyle]="{'background-image': 'url(' + imgSrc + movie.backdrop_path + ')'}">
         <div class="gradient">
+            <!-- <p>Genere: {{movie.genre}}</p> -->
             <h1>{{movie.title}}</h1>
             <span class="material-symbols-outlined">
                 star
