--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 
 <h1>Film popolari</h1>
 <ngx-slick-carousel [config]="slickConfig">
-  <div *ngFor="let movie of movieList.results" ngxSlickItem>
+  <div *ngFor="let movie of movieList" ngxSlickItem>
     <img [src]="imgSrc + movie.poster_path" alt="{{ movie.title }}" [routerLink]="['/movie', movie.id]">
   </div>
 </ngx-slick-carousel>
