--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,8 +1,8 @@
-<input type="text" id="searchInput" [(ngModel)]="keyword" (input)="movieSearch()" placeholder="Cerca" />
+<input type="text" id="searchInput" [(ngModel)]="keyword" (input)="movieSearch()" placeholder="Cerca"/>
 <div *ngIf="searchResults.length > 0">
   <ul>
     <li *ngFor="let movie of searchResults">
-      {{ movie.title }}
+      <a [routerLink]="['/movie', movie.id]" (click)="handleMovieClick()">{{ movie.title }}</a>
     </li>
   </ul>
 </div>
