--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="movieDetails">
     <h1>{{ movieDetails.title }}</h1>
     <p>{{ movieDetails.overview }}</p>
-    <iframe width="560" height="315" [src]="'https://www.youtube.com/embed/' + movieVideo.key | safeUrl" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" [src]="'https://www.youtube.com/embed/' + movieVideo.key | safeUrl" frameborder="0" allowfullscreen *ngIf="movieVideo.key"></iframe>
     <button type="button" (click)="purchaseMovie()" *ngIf="showPurchaseButton">Acquista</button>
 </div>
