--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -36,8 +36,9 @@ div {
     background-color: gray;
     border-radius: 10px;
     margin-top: 10%;
-    width: 100%;
+    width: 200%;
     text-wrap: balance;
     max-height: 80vh;
     overflow-y: auto;
+    right: 0;
 }
