--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
 
   <mat-form-field>
     <mat-label>E-mail</mat-label>
-    <input matInput placeholder="E-mail..." [(ngModel)]="model.email" name="email" required type="email"
+    <input matInput [(ngModel)]="model.email" name="email" required type="email"
       pattern="^[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$" #emailInput="ngModel">
     <mat-error *ngIf="emailInput.hasError('required')">E-mail obbligatoria</mat-error>
     <mat-error *ngIf="emailInput.hasError('pattern')">E-mail non valida</mat-error>
@@ -13,10 +13,14 @@
 
   <mat-form-field>
     <mat-label>Password</mat-label>
-    <input matInput placeholder="Password..." [(ngModel)]="model.password" name="password" required type="password"
+    <input matInput [(ngModel)]="model.password" name="password" required type="password"
       #passwordInput="ngModel">
     <mat-error *ngIf="passwordInput.hasError('required')">Password obbligatoria</mat-error>
   </mat-form-field>
 
   <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Entra</button>
+  <h3 *ngIf="!errorMessage">
+    Non sei ancora registrato?
+    <a routerLink="/register">Registrati</a>
+  </h3>
 </form>
