--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,10 +1,13 @@
 :host {
     display: flex;
-    padding: var(--menuHeight);
+    padding: var(--menuHeight) 0;
     justify-content: center;
     height: 100vh;
     box-sizing: border-box;
-    min-height: 500px;
+    min-height: 600px;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
 }
 
 form {
@@ -12,7 +15,7 @@ form {
     flex-direction: column;
     box-sizing: border-box;
     justify-content: center;
-    width: 300px;
+    width: 400px;
 }
 
 div {
