--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -2,5 +2,6 @@
     <h1>{{ movieDetails.title }}</h1>
     <p>{{ movieDetails.overview }}</p>
     <iframe width="560" height="315" [src]="'https://www.youtube.com/embed/' + movieVideo.key | safeUrl" frameborder="0" allowfullscreen *ngIf="movieVideo.key"></iframe>
-    <button type="button" (click)="purchaseMovie()" *ngIf="showPurchaseButton">Acquista</button>
+    <button type="button" (click)="purchaseMovie()" *ngIf="!moviePurchased">Acquista</button>
+    <button type="button" (click)="returnMovie()" *ngIf="moviePurchased">Restituisci Film</button>
 </div>
