--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <a routerLink=''>Home</a>
-    <!-- <a routerLink="/register">Registrazione</a> -->
+    <a routerLink='/purchases'>Acquisti</a>
     
     <div>
         <app-search></app-search>
