--- a/src/app/components/main-carousel/main-carousel.component.css
+++ b/src/app/components/main-carousel/main-carousel.component.css
@@ -31,7 +31,10 @@ h1 {
         'FILL' 0,
         'wght' 400,
         'GRAD' 0,
-        'opsz' 24
+        'opsz' 24;
+    background: linear-gradient(to bottom left, var(--primaryColor), var(--secondaryColor));
+    background-clip: text;
+    color: transparent;
 }
 
 @media only screen and (max-width: 940px) {
