--- a/src/app/components/main-carousel/main-carousel.component.html
+++ b/src/app/components/main-carousel/main-carousel.component.html
@@ -3,11 +3,12 @@
         [ngStyle]="{'background-image': 'url(' + imgSrc + movie.backdrop_path + ')'}">
         <div>
             <div>
-                <p>{{movie.genre}}</p>
-                <h1>{{movie.title}}</h1>
+                <p>{{ movie.genre }}</p>
+                <h1>{{ movie.title }}</h1>
                 <span class="material-symbols-outlined">
                     star
                 </span>
+                <span>{{ movie.vote_average }}</span>
             </div>
         </div>
     </div>
