--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-menu></app-menu>
-<main>
+<div>
+    <app-menu></app-menu>
     <router-outlet></router-outlet>
-    <app-footer></app-footer>
-</main>
+</div>
+<app-footer></app-footer>
