--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,8 @@
 p {
     background-color: hsl(245, 37%, 14%);
-    text-align: center;
     line-height: 30px;
+    margin: 0;
+    padding: 0 var(--leftRightPadding);
+    box-sizing: border-box;
+    text-align: center;
 }
