--- a/src/app/components/main-carousel/main-carousel.component.css
+++ b/src/app/components/main-carousel/main-carousel.component.css
@@ -53,6 +53,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    padding: 1% 2%;
 }
 
 @media only screen and (max-width: 940px) {
