--- a/src/app/components/main-carousel/main-carousel.component.html
+++ b/src/app/components/main-carousel/main-carousel.component.html
@@ -11,7 +11,7 @@
                     <i class="fa-solid fa-circle"></i>
                     <span>{{ movie.release_date }}</span>
                 </div>
-                <div>{{ movie.overview }}</div>
+                <p class="overview">{{ movie.overview }}</p>
                 <button (click)="purchaseMovie(movie.id)">Acquista</button>
             </div>
         </div>
