--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,2 @@
 <app-main-carousel></app-main-carousel>
-
-<h1>Film popolari</h1>
-<ngx-slick-carousel [config]="slickConfig">
-  <div *ngFor="let movie of movieList" ngxSlickItem>
-    <img [src]="imgSrc + movie.poster_path" [alt]="movie.title" [routerLink]="['/movie', movie.id]">
-  </div>
-</ngx-slick-carousel>
+<app-carousel></app-carousel>
