--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <div class="head">
   <h1>Film popolari</h1>
-  <a>Vedi tutto</a>
+  <a [routerLink]="['list', category]">Vedi tutto</a>
 </div>
 <ngx-slick-carousel [config]="slickConfig">
   <div *ngFor="let movie of movieList" ngxSlickItem>
