--- a/src/app/components/main-carousel/main-carousel.component.html
+++ b/src/app/components/main-carousel/main-carousel.component.html
@@ -1,19 +1,3 @@
 <ngx-slick-carousel [config]="slickConfig">
-    <div *ngFor="let movie of movieList" ngxSlickItem
-        [ngStyle]="{'background-image': 'url(' + imgSrc + movie.backdrop_path + ')'}">
-        <div class="gradient_y">
-            <div class="gradient_x">
-                <p>{{ movie.genre }}</p>
-                <h1>{{ movie.title }}</h1>
-                <div>
-                    <i class="fa-solid fa-star"></i>
-                    <span>{{ movie.vote_average }}</span>
-                    <i class="fa-solid fa-circle"></i>
-                    <span>{{ movie.release_date }}</span>
-                </div>
-                <p class="overview">{{ movie.overview }}</p>
-                <button (click)="purchaseMovie(movie.id)">Acquista</button>
-            </div>
-        </div>
-    </div>
+    <app-main-carousel-item *ngFor="let movie of movieList" ngxSlickItem [movie]="movie"></app-main-carousel-item>
 </ngx-slick-carousel>
