--- a/src/app/components/purchase-list/purchase-list.component.html
+++ b/src/app/components/purchase-list/purchase-list.component.html
@@ -2,7 +2,7 @@
     <h2>Elenco Acquisti</h2>
     <ul>
         <li *ngFor="let purchase of purchases">
-            <span>{{ purchase.movieId }}</span>
+            <img [src]="imgSrc + purchase.poster_path" [alt]="purchase.movieId" [routerLink]="['/movie', purchase.movieId]">
             <button (click)="returnPurchase(purchase.movieId)">Restituisci</button>
         </li>
     </ul>
