--- a/src/app/components/movie-details/movie-details.component.css
+++ b/src/app/components/movie-details/movie-details.component.css
@@ -5,3 +5,12 @@ div {
 iframe {
     width: 100%;
 }
+
+button {
+    color: white;
+    border: none;
+    background: linear-gradient(to left bottom, var(--primaryColor), var(--secondaryColor));
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
