--- a/src/app/components/main-carousel-item/main-carousel-item.component.html
+++ b/src/app/components/main-carousel-item/main-carousel-item.component.html
@@ -2,7 +2,7 @@
     <div class="gradient_y">
         <div class="gradient_x">
             <p>{{ movie.genre }}</p>
-            <h1>{{ movie.title }}</h1>
+            <img [src]="logoUrl" alt="Logo del film">
             <div>
                 <i class="fa-solid fa-star"></i>
                 <span>{{ movie.vote_average }}</span>
