--- a/src/app/components/carousel/carousel.component.css
+++ b/src/app/components/carousel/carousel.component.css
@@ -14,11 +14,21 @@ ngx-slick-carousel {
     margin: 0 auto;
 }
 
+.slick-initialized .slick-slide {
+    padding: 1vw;
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin: 0.2%;
+}
+
+.slick-slide:hover {
+    background: linear-gradient(to left bottom, var(--primaryColor), var(--secondaryColor));
+}
+
 img {
-    width: 90%;
+    width: 100%;
     height: 35vw;
     object-fit: cover;
-    margin: 0 auto;
     border-radius: 10px;
     cursor: pointer;
 }
